@@ -59,8 +59,8 @@ class TYPO3backend {
 	protected $js;
 	protected $jsFiles;
 	protected $toolbarItems;
-	private   $menuWithDefault = 160; // intentionally private as nobody should modify defaults
-	protected $menuWith;
+	private   $menuWidthDefault = 160; // intentionally private as nobody should modify defaults
+	protected $menuWidth;
 
 	/**
 	 * Object for loading backend modules
@@ -114,9 +114,9 @@ class TYPO3backend {
 		$this->toolbarItems = array();
 		$this->initializeCoreToolbarItems();
 
-		$this->menuWith = $this->menuWithDefault;
-		if (isset($GLOBALS['TBE_STYLES']['dims']['leftMenuFrameW']) && $GLOBALS['TBE_STYLES']['dims']['leftMenuFrameW'] != (int) $this->menuWith) {
-			$this->menuWith = $GLOBALS['TBE_STYLES']['dims']['leftMenuFrameW'];
+		$this->menuWidth = $this->menuWidthDefault;
+		if (isset($GLOBALS['TBE_STYLES']['dims']['leftMenuFrameW']) && (int) $GLOBALS['TBE_STYLES']['dims']['leftMenuFrameW'] != (int) $this->menuWidth) {
+			$this->menuWidth = (int) $GLOBALS['TBE_STYLES']['dims']['leftMenuFrameW'];
 		}
 	}
 
@@ -164,16 +164,16 @@ class TYPO3backend {
 
 		$menu         = $this->moduleMenu->render();
 
-		if ($this->menuWith != $this->menuWithDefault) {
+		if ($this->menuWidth != $this->menuWidthDefault) {
 			$this->css .= '
 				#typo3-logo,
 				#typo3-side-menu {
-					width: ' . ($this->menuWith - 1) . 'px;
+					width: ' . ($this->menuWidth - 1) . 'px;
 				}
 
 				#typo3-top,
 				#typo3-content {
-					margin-left: ' . $this->menuWith . 'px;
+					margin-left: ' . $this->menuWidth . 'px;
 				}
 			';
 		}
